--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,5 +1,5 @@
-<div class="container w-100 bg-dark text-white py-4" style="max-width: 100%;">
-  <div class="row mt-5 mx-5">
+<div class="container w-80 bg-dark py-1 text-white fixed-bottom" style="max-width: 100%;">
+  <div class="row mt-3 mx-3">
     <div class="col-12 col-md">
       <h5>NAGOYAMESHI</h5>
       <small class="d-block mb-3 text-muted">&copy; 2017-2021</small>
