--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,8 +1,13 @@
-<div class="py-1 bg-dark ">
+<div class="py-1 bg-dark">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
     <a class="py-2 text-white" href="/">NAGOYAMESHI</a>
     <div class="d-flex ms-md-auto">
       {% if user.is_authenticated %}
+      <form action="{% url 'profile' %}" method="post" class="d-inline">
+        {% csrf_token %} 
+      <input class="btn py-2 d-none d-md-inline-block text-white" type="submit" value="マイページ"> 
+      </form> 
+
       <form action="{% url 'logout' %}" method="post" class="d-inline">
         {% csrf_token %}
         <input class="btn btn-outline-warning py-2 d-none d-md-inline-block" type="submit" value="ログアウト">
@@ -14,3 +19,4 @@
     </div>
   </nav>
 </div>
+
