--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -5,7 +5,7 @@
 
   
 <h2>ログイン</h2>
-<form action="{% url 'login' %}" method="post">
+<form action="{% url 'nagoyameshi:login' %}" method="post">
     {% csrf_token %}
     <table  class="signup_table">
         <tr class="contact">
@@ -38,8 +38,8 @@
 
 <div class="create_account">
     <div  style="margin-right: 10px;">   
-        <a href="{% url 'password_reset' %}"><input class="btn btn-outline-warning" type="submit" value="パスワードをお忘れの方はこちら"></a><br><br>
-        <a href="{% url 'signup' %}"><input class="btn btn-outline-warning" type="submit" value="アカウントをお持ちでない方はこちら"></a>
+        <a href="{% url 'nagoyameshi:password_reset' %}"><input class="btn btn-outline-warning" type="submit" value="パスワードをお忘れの方はこちら"></a><br><br>
+        <a href="{% url 'nagoyameshi:signup' %}"><input class="btn btn-outline-warning" type="submit" value="アカウントをお持ちでない方はこちら"></a>
     </div>
 </div>
        
