--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -15,7 +15,7 @@
 					><i class="fas fa-check"></i
 					>メールアドレスを入力して、パスワードリセットの手順を開始してください。</label
 				><br />
-				<form method="post" action="{% url 'password_reset' %}">
+				<form method="post" action="{% url 'nagoyameshi:password_reset' %}">
                     {% csrf_token %}
 					<p>
 						<label for="id_email">メールアドレス（半角英数字）</label><br />
