詳細画面にレビュー追加

--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -36,7 +36,7 @@
             </form>
 
             <div class="mt-4 d-flex justify-content-between">
-                <a href = "{% url 'signup_premium' %}" class="btn btn-primary">有料プラン登録</a>
+                <a href = "{% url 'nagoyameshi:signup_premium' %}" class="btn btn-primary">有料プラン登録</a>
                 <!-- <a class="btn btn-outline-danger me-2">有料プラン登録</a>-->
                 <a href = class="btn btn-outline-info me-2">予約一覧</a>
                 <a href = class="btn btn-outline-success">お気に入り一覧</a>
