--- a/templates/pages/signup_premium.html
+++ b/templates/pages/signup_premium.html
@@ -28,5 +28,5 @@
  <button type="submit" class="btn btn-primary">登録</button>
 
 
-<div class="back_top"><a href="{% url 'index' %}">トップページに戻る</a></div>
+<div class="back_top"><a href="{% url 'nagoyameshi:index' %}">トップページに戻る</a></div>
 {% endblock %}
