--- a/templates/pages/restaurant_detail.html
+++ b/templates/pages/restaurant_detail.html
@@ -1,56 +1,91 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block main %}
+<div style="max-width: 700px; margin: 0 auto; text-align: center">
+	<h2>{{ object.name }}</h2>
+	<div class="bg-white border overflow-hidden">
+		<img
+			src="{{ restaurant.image.url }}"
+			alt="{{ restaurant.name }}"
+			width="100%"
+		/>
+	</div>
 
-{% block main %}
-<div style="max-width: 600px; margin: 0 auto; text-align: center;">
-    <h2>{{ object.name }}</h2>
-      <div class="bg-white border overflow-hidden">
-        <img src="/{{ object.image }}" width="100%">
-      </div>
-    
-    <table style="margin: 0 auto; text-align: left; border-spacing: 10px;">
-        <tr>
-            <th>店舗名</th>
-            <td>{{ object.name }}</td>
-        </tr>
-        <tr>
-            <th>説明</th>
-            <td>{{ object.description }}</td>
-        </tr>
-        <tr>
-            <th>価格帯</th>
-            <td>{{ object.price }}</td>
-        </tr>
-        <tr>
-            <th>住所</th>
-            <td>{{ object.address }}</td>
-        </tr>
-        <tr>
-            <th>郵便番号</th>
-            <td>{{ object.post_code }}</td>
-        </tr>
-        <tr>
-            <th>営業開始時間</th>
-            <td>{{ object.start_time }}</td>
-        </tr>
-        <tr>
-            <th>営業終了時間</th>
-            <td>{{ object.end_time }}</td>
-        </tr>
-        <tr>
-            <th>定休日</th>
-            <td>{{ object.closed_day }}</td>
-        </tr>
-        <tr>
-            <th>電話番号</th>
-            <td>{{ object.phone }}</td>
-        </tr>
-    </table>
+	<table style="margin: 0 auto; text-align: left; border-spacing: 10px">
+		<tr>
+			<th>店舗名</th>
+			<td>{{ restaurant.name }}</td>
+		</tr>
+		<tr>
+			<th>説明</th>
+			<td>{{ restaurant.description }}</td>
+		</tr>
+		<tr>
+			<th>価格帯</th>
+			<td>{{ restaurant.price }}</td>
+		</tr>
+		<tr>
+			<th>住所</th>
+			<td>{{ restaurant.address }}</td>
+		</tr>
+		<tr>
+			<th>郵便番号</th>
+			<td>{{ restaurant.post_code }}</td>
+		</tr>
+		<tr>
+			<th>営業時間</th>
+			<td>{{ restaurant.start_time }} ~ {{ restaurant.end_time }}</td>
+		</tr>
 
-    <form action="/cart/add/" method="POST" style="margin-top: 20px;">
+		<tr>
+			<th>定休日</th>
+			<td>{{ restaurant.closed_day }}</td>
+		</tr>
+		<tr>
+			<th>電話番号</th>
+			<td>{{ restaurant.phone }}</td>
+		</tr>
+	</table>
+
+	<form action="/cart/add/" method="POST" style="margin-top: 20px">
+		{% csrf_token %}
+		<input type="hidden" name="item_pk" value="{{ object.pk }}" />
+		<input
+			class="btn btn-outline-warning"
+			type="submit"
+			value="お気に入り登録"
+		/>
+	</form>
+</div>
+
+<!--レビュー表示-->
+<div style="max-width: 600px; margin: 40px auto 0 auto; text-align: center">
+	<h3>レビュー一覧</h3>
+	{% for review in reviews %}
+	<p>ユーザ名　{{ review.user }}: {{ review.content }}</p>
+	<p>評価　{{review.star}}</p>
+	{% empty %}
+	<p>まだレビューはありません。</p>
+	{% endfor %}
+
+	<h3>レビュー投稿</h3>
+    <form method="post" style="margin-bottom: 200px;">
         {% csrf_token %}
-        <input type="hidden" name="item_pk" value="{{ object.pk }}">
-         <input class="btn btn-outline-warning" type="submit" value="お気に入り登録" >
-        <!--<p><input type="number" name="quantity" value="1" max="{{ object.stock }}"> 点</p>-->
+        
+        <p>
+            <label>件名</label>
+            <textarea type="context" rows="1" style="width: 90%;"></textarea>
+        </p>
+        <p>
+            <label>内容</label>
+            <textarea name="content" rows="5" style="width: 90%;"></textarea>
+        </p>
+        <p>
+            <label>星</label>
+            <input type="number" name="star" min="1" max="5" value="5">
+        </p>
+
+        <button type="submit">投稿する</button>
     </form>
 </div>
+</div>
+
 {% endblock %}
