--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -17,7 +17,7 @@
 <!--https://teratail.com/questions/326819-->
 
 
-<form action="{% url 'signup' %}" method="post">
+<form action="{% url 'nagoyameshi:signup' %}" method="post">
     {% csrf_token %}
     <input type="hidden" value="8EUebdpKj8Kl8ElqupVHtgdqp4iGRy237gwJUMDxGPYMUOTcIaNBvlwFO6u88Aoh">
     <table  class="signup_table">
