--- a/templates/pages/reservation_list.html
+++ b/templates/pages/reservation_list.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h2>あなたの予約一覧</h2>
-
-{% for reservation in reservations %}
-  <div>
-    店舗: {{ reservation.restaurant.name }}<br>
-    日時: {{ reservation.date }}<br>
-    人数: {{ reservation.people }}
-  </div>
-{% empty %}
-  <p>まだ予約はありません。</p>
+<div style="max-width: 700px; margin: 0 auto; text-align: center; font-size: 30px;" >
+    <h2>あなたの予約一覧</h2>
+    
+    {% for reservation in reservations %}
+      <div>
+        店舗: {{ reservation.restaurant.name }}<br>
+        日時: {{ reservation.date }}<br>
+        人数: {{ reservation.people }}
+      </div>
+    {% empty %}
+      <p>まだ予約はありません。</p>
+</div>
 {% endfor %}
 {% endblock %}
