ログイン画面のデザイン修正

--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -37,10 +37,8 @@
 
             <div class="mt-4 d-flex justify-content-between">
                 <a href = "{% url 'nagoyameshi:signup_premium' %}" class="btn btn-primary">有料プラン登録</a>
-                <a href="{% url 'nagoyameshi:reservation_list' %}" class="btn btn-primary">予約一覧</a>
-                <!-- <a class="btn btn-outline-danger me-2">有料プラン登録</a>-->
-                <a href = class="btn btn-primary">お気に入り一覧</a> 
-                <!--<a href = class="btn btn-outline-info me-2">有料会員解約</a> -->
+                <a href = "{% url 'nagoyameshi:reservation_list' %}" class="btn btn-primary">予約一覧</a>
+                <a href = "#" class="btn btn-primary">お気に入り一覧</a>  <!--url追加-->
             </div>
 
         </div>
