--- a/templates/pages/restaurant_list.html
+++ b/templates/pages/restaurant_list.html
@@ -15,14 +15,14 @@
 </form>
 
 {% for restaurant in restaurants %}
-<div id="restaurants">
-    <a href="{% url 'nagoyameshi:restaurant' restaurant.id %}" class="restaurant_list">
+  <div id="restaurants">
+    <a href="{% url 'nagoyameshi:restaurant_detail' restaurant.id %}" class="restaurant_list">
         <div id="restaurant_image"><img src="{{ restaurant.image.url }}" alt="{{restaurant.name}}" ></div>
         <div id="restaurant_name">{{ restaurant.name }}</div>
         <div style="text-align:left"> カテゴリ: {% for category in restaurant.category_name.all %}{{ category.category_name }} {% endfor %}</div>
         <div id="restaurant_info">{{ restaurant.address }}</div>
-</a>
-</div>
+    </a>
+  </div>
 {% endfor %}
 
 <div id="page">
