--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -3,44 +3,58 @@
 
 {% block main %}
 
-  
-<h2>ログイン</h2>
-<form action="{% url 'nagoyameshi:login' %}" method="post">
-    {% csrf_token %}
-    <table  class="signup_table">
-        <tr class="contact">
-            <th>
-                <label for="id_username" class="contact_label">メールアドレス:</label>
-            </th>
-            <td>
-                <input type="text" name="username" autocomplete="off" required="" id="id_username" data-nlok-ref-guid="9d0821cd-dd0d-4e70-d38c-8621a91ad4f3" class="contact_textbox">
-            </td>
-
+<div class="d-flex justify-content-center align-items-center" style="min-height: 90vh;">
+  <div class="card shadow p-4" style="width: 400px;">
+    <h2 class="text-center mb-4">ログイン</h2>
+    <form action="{% url 'nagoyameshi:login' %}" method="post">
+      {% csrf_token %}
+      <table class="w-100 text-center">
+        <tr class="contact"><th class="text-start"><label for="id_username" class="contact_label">メールアドレス:</label></th>
+            <td><input type="text" name="username" autocomplete="off" required id="id_username" class="form-control"></td>
         </tr>
-
         <tr class="contact">
-            <th>
-                <label for="id_password" class="contact_label">パスワード</label>
-                
-            </th>
-            <td>
-                <input type="password" name="password" autocomplete="off" required="" id="id_password" data-nlok-ref-guid="66c580a5-7773-4654-f4cf-c4f517dc8546" class="contact_textbox">
-            </td>
+          <th class="text-start"><label for="id_password" class="contact_label">パスワード:</label></th>
+          <td><input type="password" name="password" autocomplete="off" required id="id_password" class="form-control"></td>
         </tr>
-    </table>
-    <div class="input-group-apend">
-        <input class="btn btn-outline-warning" type="submit" value="ログイン" id="search_button">
+      </table>
+      <div class="text-center mt-4">
+        <input class="btn btn-warning w-100" type="submit" value="ログイン">
+      </div>
+    </form>
+
+    <div class="text-center mt-4">
+      <a href="{% url 'nagoyameshi:password_reset' %}" class="btn btn-outline-secondary w-100 mb-2">パスワードをお忘れの方はこちら</a>
+      <a href="{% url 'nagoyameshi:signup' %}" class="btn btn-outline-primary w-100">アカウントをお持ちでない方はこちら</a>
     </div>
-  </form>
-  <br>
-
-
-
-<div class="create_account">
-    <div  style="margin-right: 10px;">   
-        <a href="{% url 'nagoyameshi:password_reset' %}"><input class="btn btn-outline-warning" type="submit" value="パスワードをお忘れの方はこちら"></a><br><br>
-        <a href="{% url 'nagoyameshi:signup' %}"><input class="btn btn-outline-warning" type="submit" value="アカウントをお持ちでない方はこちら"></a>
-    </div>
+  </div>
 </div>
-       
+
+<!--bootstrapを利用に変更-->
+<!--
+<h2>ログイン</h2> 
+    <form action="{% url 'nagoyameshi:login' %}" method="post">
+        {% csrf_token %}
+        <table  class="signup_table">
+            <tr class="contact">
+                <th><label for="id_username" class="contact_label">メールアドレス:</label></th>
+                <td><input type="text" name="username" autocomplete="off" required="" id="id_username" data-nlok-ref-guid="9d0821cd-dd0d-4e70-d38c-8621a91ad4f3" class="contact_textbox"></td>
+            </tr>
+            <tr class="contact">
+                <th><label for="id_password" class="contact_label">パスワード</label> </th>
+                <td><input type="password" name="password" autocomplete="off" required="" id="id_password" data-nlok-ref-guid="66c580a5-7773-4654-f4cf-c4f517dc8546" class="contact_textbox"></td>
+            </tr>
+        </table>
+        <div class="input-group-append">
+            <input class="btn btn-outline-warning" type="submit" value="ログイン" id="search_button">
+        </div>
+    </form>
+    <br>
+    <div class="create_account">
+        <div  style="margin-right: 10px;">   
+            <a href="{% url 'nagoyameshi:password_reset' %}"><input class="btn btn-outline-warning" type="submit" value="パスワードをお忘れの方はこちら"></a><br><br>
+            <a href="{% url 'nagoyameshi:signup' %}"><input class="btn btn-outline-warning" type="submit" value="アカウントをお持ちでない方はこちら"></a>
+        </div>
+    </div>
+-->
+
 {% endblock %}
