--- a/templates/pages/signup.html
+++ b/templates/pages/signup.html
@@ -1,82 +1,61 @@
 {% extends "base.html" %}
 
 {% block main %}
+<div class="d-flex justify-content-center align-items-center bg-light" style="min-height: 80vh;">
+  <div class="card shadow-lg p-3" style="width: 70%; max-width: 900px; min-height: 70vh;">
+    <h2 class="text-center mb-4 fs-1">無料会員登録</h2>
 
-    <div class="signup_pros">
-        <h2>会員登録をするとできること</h2>
-        <ul class="signup_list">
-            <li>各店舗のNAGOYAMESHI会員によるレビューが見れるようになる！</li>
-            <li>更に有料会員（月額300円）になると店舗お気に入り登録やレビュー投稿、NAGOYAMESHIサイトからの予約が可能！</li>
-        </ul> 
+    <!-- 会員登録のメリット案内 -->
+    <div class="mb-2 text-center">
+      <h4 class="mb-3">まずは無料会員登録から！</h4>
+      <h6> 有料会員になると以下も可能に！</h6>
+      <ul class="fs-5" style="list-style-type: disc; list-style-position: inside;">
+        <li>店舗のお気に入り登録</li>
+        <li>レビュー投稿</li>
+        <li>NAGOYAMESHIサイトからの予約</li>
+      </ul>
     </div>
 
+    <!-- 登録フォーム -->
+    <form action="{% url 'nagoyameshi:signup' %}" method="post" class="px-3">
+      {% csrf_token %}
+      
+      <div class="mb-4">
+        <label for="id_username" class="form-label fs-4">ユーザー名</label>
+        <input type="text" name="username" autocomplete="username" required id="id_username" class="form-control form-control-lg">
+        <small class="text-muted d-block mt-2">半角英数字、@ / . / + / - / _ で150文字以下にしてください。</small>
+      </div>
 
-<h2>会員登録</h2>
+      <div class="mb-4">
+        <label for="id_email" class="form-label fs-5">メールアドレス</label>
+        <input type="email" name="email" required id="id_email" class="form-control form-control-lg">
+      </div>
 
+      <div class="mb-4">
+        <label for="id_password1" class="form-label fs-5">パスワード</label>
+        <input type="password" name="password1" autocomplete="new-password" required id="id_password1" class="form-control form-control-lg">
+        <ul class="mt-2 text-muted" style="font-size: 0.95rem;">
+          <li>あなたの他の個人情報と似ているパスワードにはできません。</li>
+          <li>パスワードは最低8文字以上必要です。</li>
+          <li>よく使われるパスワードにはできません。</li>
+          <li>数字だけのパスワードにはできません。</li>
+        </ul>
+      </div>
 
-<!--https://teratail.com/questions/326819-->
+      <div class="mb-4">
+        <label for="id_password2" class="form-label fs-5">パスワード（確認用）</label>
+        <input type="password" name="password2" autocomplete="new-password" required id="id_password2" class="form-control form-control-lg">
+        <small class="text-muted d-block mt-2">確認のため、再度パスワードを入力してください。</small>
+      </div>
 
+      <div class="text-center mt-5">
+        <input class="btn btn-warning btn-lg w-100 py-3 fs-5" type="submit" value="新規作成">
+      </div>
+    </form>
 
-<form action="{% url 'nagoyameshi:signup' %}" method="post">
-    {% csrf_token %}
-    <input type="hidden" value="8EUebdpKj8Kl8ElqupVHtgdqp4iGRy237gwJUMDxGPYMUOTcIaNBvlwFO6u88Aoh">
-    <table  class="signup_table">
-        <tr class="contact">
-            <th>
-                <label for="id_username" class="contact_label">ユーザー名</label>
-            </th>
-            <td>
-                <input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" required aria-describedby="id_username_helptext" id="id_username" class="contact_textbox"><br>
-                <span class="helptext signup_caution" id="id_username_helptext">この項目は必須です。半角アルファベット、半角数字、@/./+/-/_ で150文字以下にしてください。</span>
-            </td>
-
-        </tr>
-
-        <tr class="contact">
-            <th>
-                <label for="id_email" class="contact_label">メールアドレス</label>
-                
-            </th>
-            <td>
-                <input type="email" name="email" maxlength="254" autofocus required id="id_email" class="contact_textbox">
-            </td>
-        </tr>
-
-        <tr class="contact">
-            <th>
-                <label for="id_password1" class="contact_label">パスワード</label>
-            </th>
-            <td>
-                <input type="password" name="password1" autocomplete="new-password" required aria-describedby="id_password1_helptext" id="id_password1" class="contact_textbox"> <br>
-                <span class="helptext" id="id_password1_helptext">
-                    <ul>
-                        <li class="signup_caution">あなたの他の個人情報と似ているパスワードにはできません。</li>
-                        <li class="signup_caution">パスワードは最低 8 文字以上必要です。</li>
-                        <li class="signup_caution">よく使われるパスワードにはできません。</li>
-                        <li class="signup_caution">数字だけのパスワードにはできません。</li>
-                    </ul>
-                </span>
-            
-            </td>
-
-        </tr>
-
-        <tr class="contact">
-            <th>
-                <label for="id_password2" class="contact_label">パスワード(確認用)</label>
-            </th>
-            <td>
-                <input type="password" name="password2" autocomplete="new-password" required aria-describedby="id_password2_helptext" id="id_password2" class="contact_textbox"><br>
-                <span class="helptext signup_caution" id="id_password2_helptext">確認のため、再度パスワードを入力してください。</span>
-            </td>
-        </tr>
-        <td>
-            <div class="input-group-apend">
-                <input class="btn btn-outline-warning" type="submit" value="新規作成">
-            </div>
-        </td>
-    </table>
-</form>
-
-
+    <div class="text-center mt-5">
+      <a href="{% url 'nagoyameshi:login' %}" class="btn btn-outline-primary btn-lg w-100 py-3 fs-5">すでにアカウントをお持ちの方はこちら</a>
+    </div>
+  </div>
+</div>
 {% endblock %}
