--- a/templates/pages/restaurant_detail.html
+++ b/templates/pages/restaurant_detail.html
@@ -50,7 +50,7 @@
 		<input type="hidden" name="item_pk" value="{{ restaurant.pk }}" />   <!--object→restaurant-->
 		<a href="{% url 'nagoyameshi:reservation' restaurant.pk %}">予約する</a>
 	    <!--<a href="{% url 'nagoyameshi:reservation' restaurant.pk %}" class="btn btn-primary"> -->
-		<input class="btn btn-outline-warning" type="submit" value="お気に入り登録"/>
+		<!-- <input class="btn btn-outline-warning" type="submit" value="お気に入り登録"/> -->
 	</form>
 </div>
 
